compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/kt34789.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL

// FILE: test1.kt
<!POSSIBLE_INITIALIZATION_DEADLOCK!>object A<!> {
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val a = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>test<!><!>
    val b = "test"
}

// FILE: test2.kt
<!POTENTIALLY_UNINITIALIZED_PROPERTY!>val test = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>A.b<!><!>
